--- a/index.html
+++ b/index.html
@@ -11,18 +11,24 @@
         <div>
         <h1>Bacon Time</h1>
         <img src="images/bacon-aic2022.png" 
-        width="30%" 
+        width="45%" 
         height="30%" 
         alt="My test image">
+        <figure>
+            <img src= "images/championsRPL.jpg"
+        width="33%" 
+        height="33%" 
+        alt="My test image">
+        </figure>
         <h2>Bacon Time in AIC 2022</h2>
         <p>การแข่งขัน Arena of Valor International Championship 2022 </p>
-        <h3>Line Up AIC 2022</h3>
+        <h3 id = "headLine">Line Up AIC 2022</h3>
         <ul>
-            <li>BAC MarkKy - Dark Slayer Lane</li>
+            <li class="dotFrame">BAC MarkKy - Dark Slayer Lane</li>
             <li>BAC Moowan - Abyssal Dragon Lane</li>
-            <li>BAC TAOX - Support BAC</li>
+            <li class="dotFrame">BAC TAOX - Support BAC</li>
             <li>BAC AlmondP - Jungle</li>
-            <li>BAC Kimsensei - Mid Lane</li>
+            <li class="dotFrame">BAC Kimsensei - Mid Lane</li>
             <li>BAC Lycan - Support</li>
         </ul>
         <p>ติดตามพวกเขาเหล่านี้ได้ที่
