--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
         <img src="images/bacon-aic2022.png" 
         width="45%" 
         height="30%" 
-        alt="My test image">
+        alt="My test image"
+        style="object-fit: cover;">
         <figure>
             <img src= "images/championsRPL.jpg"
         width="33%" 
         height="33%" 
-        alt="My test image">
+        alt="My test image"
+        style="object-fit: cover;">
         </figure>
-        <h2>Bacon Time in AIC 2022</h2>
+        <h4>Bacon Time in AIC 2022</h4>
         <p>การแข่งขัน Arena of Valor International Championship 2022 </p>
         <h3 id = "headLine">Line Up AIC 2022</h3>
         <ul>
